--- a/src/Foundation/Installer/tests/packages.config
+++ b/src/Foundation/Installer/tests/packages.config
@@ -15,6 +15,9 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net46" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net46" />
   <package id="Moq" version="4.5.30" targetFramework="net46" />
   <package id="netDumbster" version="1.3.0.7" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
@@ -35,6 +38,7 @@
   <package id="System.Reflection" version="4.1.0" targetFramework="net46" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net46" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net46" />
   <package id="System.Threading" version="4.0.11" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net46" />
   <package id="xunit" version="2.2.0" targetFramework="net46" />
