Restore AppVeyor tests to run, move 2 tasks from before_test to after_test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ before_test:
 test:
   assemblies:
     only:
-      - \temp\bin\Sitecore.*.Tests.dll
+      - \src\**\Tests\bin\**\Sitecore.*.Tests.dll
 
 after_test:
   - gulp Package-Prepare-For-Courier
