Re-add npm cache

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ cache:
   - '%LocalAppData%\NuGet\Cache'          # NuGet < v3
   - '%LocalAppData%\NuGet\v3-cache'       # NuGet v3
   - node_modules -> package.json          # local npm modules
-  #- '%APPDATA%\npm-cache' -> package.json # npm cache
+  - '%AppData%\npm-cache' -> package.json # npm cache
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:nodejs_platform
