--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,19 @@ after_test:
       }
   - ps: Copy-Item -Path ".\environments\$env:DEPLOY_ENVIRONMENT\App_Config" -Destination ".\temp" -Recurse -Force
   - .\lib\Sitecore.Courier\Sitecore.Courier.Runner.exe -t .\temp -o .\Habitat.update -r
+  - 7z a Habitat.update.zip Habitat.update
 
 artifacts:
-  - path: Habitat.update
-    name: Habitat Sitecore Update Package
+  - path: Habitat.update.zip
+    name: HabitatSitecoreUpdatePackage
+
+deploy:
+  - provider: Environment
+    name: staging
+    on:
+      branch: appveyor-8.2.5
+
+  - provider: Environment
+    name: production
+    on:
+      appveyor_repo_tag: true
