--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ after_test:
       }
   - ps: Copy-Item -Path ".\environments\$env:DEPLOY_ENVIRONMENT\App_Config" -Destination ".\temp" -Recurse -Force
   - .\lib\Sitecore.Courier\Sitecore.Courier.Runner.exe -t .\temp -o .\Habitat.update -r
-  - 7z a Habitat.update.zip Habitat.update
+  - 7z a Habitat.update.zip %APPVEYOR_BUILD_FOLDER%\Habitat.update %APPVEYOR_BUILD_FOLDER%\deployment\*
 
 artifacts:
   - path: Habitat.update.zip
