Revert SUGCON Demo

--- a/src/Project/Habitat/serialization/Content/Habitat/Global/Media/Simplicity.yml
+++ b/src/Project/Habitat/serialization/Content/Habitat/Global/Media/Simplicity.yml
@@ -40,7 +40,7 @@ Languages:
         <image mediapath="" src="" height="" mediaid="{09EC48F0-CFEC-4E83-AB7B-E5D974F535F7}" hspace="" usethumbnail="" showineditor="" width="" alt="Man using Laptop" vspace="" ></image>
     - ID: "63dda48b-b0cb-45a7-9a1b-b26ddb41009b"
       Hint: MediaTitle
-      Value: "SUGCON Rocks!"
+      Value: Simplicity
     - ID: "9f51dead-ad6e-41c2-9759-7be17eb474a4"
       Hint: MediaImage
       Value: |
